# bluepill-setup

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md  iar-toolchain.cmake  platformio.ini  startup_stm32f103xb.s
BSP/STM32F1xx_Bluepill/: stm32f1xx_bluepill.c  stm32f1xx_bluepill.h
inc/: app_config.h  main.h  stm32f1xx_hal_conf.h
libs/stm/: CMakeLists.txt
src/: main.c
